trunk/Archive2/22/1648a1dc830d45/output
main.cpp: In function 'int main()':
main.cpp:11:42: error: 'const class std::ios_base::failure' has no member named 'code'
                   << "Error code: " << e.code().value() 
                                          ^
main.cpp:12:32: error: 'const class std::ios_base::failure' has no member named 'code'
                   << " (" << e.code().message() << ")\n"
                                ^
main.cpp:13:46: error: 'const class std::ios_base::failure' has no member named 'code'
                   << "Error category: " << e.code().category().name() << '\n';
                                              ^
